host/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### limit tcp 2232 0.0.0.0/0 any 0.0.0.0/0 in comment=53534820706f72742072617465206c696d6974
-A ufw-user-input -p tcp --dport 2232 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 2232 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 2232 -j ufw-user-limit-accept

### tuple ### allow any 2232 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 2232 -j ACCEPT
-A ufw-user-input -p udp --dport 2232 -j ACCEPT

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT

### tuple ### allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT

### tuple ### allow tcp 3100 172.17.0.1 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -d 172.17.0.1 --dport 3100 -j ACCEPT

### tuple ### allow tcp 17777 0.0.0.0/0 any 10.0.0.2 in_enp4s0.4000 comment=747261696c732062726f757465722076696120666c6167736869702076537769746368
-A ufw-user-input -i enp4s0.4000 -p tcp --dport 17777 -s 10.0.0.2 -j ACCEPT

### tuple ### route:allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 80 -j ACCEPT

### tuple ### route:allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 443 -j ACCEPT

### tuple ### route:allow tcp 2222 172.31.0.5 any 0.0.0.0/0 in comment=616c6c6f7720666f7267656a6f2d666f7267656a6f2d3120323232322f746370206361646479
-A ufw-user-forward -p tcp -d 172.31.0.5 --dport 2222 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT

### tuple ### allow tcp 9630 0.0.0.0/0 any 192.168.0.0/16 in comment=70726f6d65746865757320e28692206e667461626c65732d6578706f72746572
-A ufw-user-input -p tcp --dport 9630 -s 192.168.0.0/16 -j ACCEPT

### tuple ### allow tcp 9630 0.0.0.0/0 any 172.16.0.0/12 in comment=70726f6d65746865757320e28692206e667461626c65732d6578706f72746572
-A ufw-user-input -p tcp --dport 9630 -s 172.16.0.0/12 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
